[package]
name = "correct_word"
version = "0.1.1"
edition = "2021"
description = "A No brainer 'did you mean' library for Rust"
repository = "https://github.com/newtoallofthis123/correct_word"
license = "MIT"
authors = ["NoobScience <noobscience@duck.com>"]
keywords = ["did-you-mean", "correct_word", "levenstein"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
